--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,9 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
+        "laravel/spark-paddle": "^5.0",
         "laravel/tinker": "^2.8",
-        "laravel/spark-paddle": "^5.0"
+        "spatie/laravel-sitemap": "^7.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
